--- a/assets/style.css
+++ b/assets/style.css
@@ -106,7 +106,9 @@ main{
 
 .search-input-section{
     display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: flex-start;
     position: absolute;
     top: 0;
     width: 100%;
@@ -119,12 +121,10 @@ main{
 
 .search-input{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
+    /* height: 100vh; */
     z-index: 1000;
     transition: .3s;
     padding-top: 20px;
@@ -140,13 +140,21 @@ main{
 }
 
 .search-input input:focus{
-    border: 1px solid blue;
-    box-shadow: 0 0 4px rgba(0, 0, 255, 0.5);
+    border: 1px solid rgba(59,130,246);
+    box-shadow: 0 0 4px rgba(59,130,246,.5);
 }
 
+.search-input i{
+    font-size: 30px;
+    cursor: pointer;
+    padding: 8px;
+    border-radius: 10px;
+}
 
-
-
+.search-input i:hover{
+    background-color: rgba(59,130,246,.5);
+    transition: .3s;
+}
 
 /* -------------------------------------- */
 .search{
@@ -162,6 +170,41 @@ main{
 
 .search:hover{
     background-color: rgba(59,130,246,.5);
+}
+
+.results{
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+.search-result{
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    z-index: 1000;
+    padding: 10px 0;
+}
+
+.search-result-item{
+    display: flex;
+    align-items: center;
+    width: 89%;
+    margin-right: 10px;
+    gap: 10px;
+    padding: 10px;
+    border-radius: 10px;
+    transition: .3s;
+}
+
+.search-result-item:hover{
+    background-color: rgba(59,130,246,.5);
+}
+
+.search-result-item img{   
+    width: 70px;
+    height: 70px;
+    border-radius: 10px;
 }
 
 .filter{
