--- a/assets/style.css
+++ b/assets/style.css
@@ -400,6 +400,10 @@ main{
     color: rgb(150, 149, 149);
 }
 
+.active-size{
+    border: 1px solid rgba(59,130,246);
+    /* background-color: red; */
+}
 section h4{
     width: 100%;
     border: 1px solid rgb(227, 226, 226);
