--- a/assets/style.css
+++ b/assets/style.css
@@ -484,23 +484,41 @@ section h4{
     padding: 1rem;
 }
 
-.size-card{
+.type-place, .size-place{
+    align-items: center;
+    width: 93%;
+}
+
+.type-card{
     border-top: #ccc 1px solid;
-    width: 90%;
+    padding: 10px 0;
+    width: 100%;
     margin: 15px;
 }
 
-.size-place:last-child{
+.type-place:last-child .type-card{
     border-bottom: #ccc 1px solid;
-
+    background-color: red;
 }
 
+.size-card{
+    border-top: #ccc 1px solid;
+    padding: 10px 0;
+    width: 100%;
+    margin: 15px;
+}
+
+/* .size-place:last-child .size-card{
+    border-bottom: #ccc 1px solid;
+} */
+
+.type-card .cup-description, 
 .size-place .cup-description{
     gap: 15px;
 }
 
-.cup-description b{
-    font-size: 20px;
+.cup-description b, span{
+    font-size: 18px;
 }
 
 form .form-check {
