--- a/assets/style.css
+++ b/assets/style.css
@@ -105,7 +105,7 @@ main{
 /* search div when click search button */
 
 .search-input-section{
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
@@ -344,6 +344,12 @@ main{
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     color: black;
 }
+
+.slider-item.active {
+    background-color: #007bff;
+    color: white;
+}
+
 /* -------------------- popup image style ----------------- */
 
 .popup-image {
