--- a/assets/style.css
+++ b/assets/style.css
@@ -57,6 +57,10 @@ header{
     transition: transform 0.3s ease, top 0.3s ease;
 }
 
+.navbar .container{
+    padding: 10px 20px;
+}
+
 .navbar-hidden {
     transform: translateY(-100%);
 }
@@ -66,6 +70,10 @@ main{
 }
 
 /* -------------------- */
+
+.dark-light{
+    margin-left: 15px;
+}
 
 .dark-mode{
     background-color: rgb(68, 68, 68);
@@ -96,7 +104,7 @@ main{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
+    /* padding: 10px 20px; */
     gap: 15px;
 }
 
@@ -251,24 +259,14 @@ main{
 }
 
 .language .language-item{
-    width: 40px;
-    height: 40px;
+    width: min-content;
     border-radius: 50px;
+    border-color: rgba(59,130,246,.5);
+    padding: 10px;
 }
 
-.language .language-item img{
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    object-fit: cover;
-    border-radius: 50px;
-}
-
-.language .language-options{
-    position: absolute;
-    z-index: 100;
-    display: none;
-    transition: 2s;
+.language .language-item:focus{
+    border-color: rgba(59,130,246,.5);
 }
 
 /* -------------------------------------- */
@@ -295,12 +293,23 @@ main{
     border: none;
 }
 
+.filter-options>div:first-child {
+    gap: 10px;
+    overflow-x: auto;
+}
+
 .filter-options .btn {
     border-radius: 10px;
 }
 
-#cookingTime {
-    width: 100%;
+.filter-btn{
+    padding: 5px 10px;
+}
+
+.reset{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 /* --------------------------------------- */
 
@@ -323,7 +332,8 @@ main{
     top: 0px;
     background-color: white;
     z-index: 10;
-    padding: 10px;
+    padding: 20px 0;
+    padding-right: 5px;
     width: 100%;
 }
 
@@ -342,13 +352,17 @@ main{
     justify-content: center;
     min-width: 100px;
     height: 40px;
-    margin-right: 10px;
+    margin: 0 5px;
     background-color: #f0f0f0;
     border: 1px solid #ccc;
     border-radius: 8px;
     border: none;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     color: black;
+}
+
+.slider-item:first-child{
+    margin-left: 0;
 }
 
 .slider-item.active {
@@ -486,25 +500,15 @@ section h4{
     padding: 0;
 }
 
-.see-more-image img {
-    width: 100%;
-    height: auto;
-    display: block;
-}
-
 .see-more-popup h5 {
     padding: 1rem;
-}
-
-.see-more-popup form {
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
+    font-size: 30px;
 }
 
 .type-place, .size-place{
     align-items: center;
-    width: 93%;
+    padding: 10px;
+    margin-right: 40px;
 }
 
 .type-card{
@@ -526,38 +530,13 @@ section h4{
     margin: 15px;
 }
 
-/* .size-place:last-child .size-card{
-    border-bottom: #ccc 1px solid;
-} */
-
-.type-card .cup-description, 
-.size-place .cup-description{
+.cup-description{
     gap: 15px;
 }
 
 .cup-description b, span{
     font-size: 18px;
 }
-
-form .form-check {
-    border-top: #ccc 1px solid;
-    display: flex;
-    align-items: center;
-}
-
-form .form-check label {
-    display: block;
-    padding: 1rem;
-    width: 100%;
-}
-
-form .form-check:last-child{
-    border-bottom: #ccc 1px solid;
-}
-
-/* --------------------------------------- */
-
-
 
 /* --------------------------------------- */
 
@@ -618,21 +597,20 @@ form .form-check:last-child{
     .see-more-image{
         max-height: 200px;
     }
-    .see-more-image img{
-        width: 100%;
-        height: auto;
-    }
 }
 
 @media screen and (max-width: 470px) {
-    header{
-        background-color: yellow;
+    /* .navbar .container{
+        padding: 10px 10px 10px 0 ;
+    } */
+
+    .nav-right{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 5px;
     }
-    .navbar .container{
-        padding: 0;
-        padding-left: 0;
-        padding-right: 0;
-    }
+
     .search-result-item{
         width: 85%;
         margin-right: 0;
@@ -644,13 +622,67 @@ form .form-check:last-child{
         font-size: 10px;
     }
     .slider-item{
-        font-size: 13px;
+        font-size: 14px;
         min-width: min-content;
-        height: 30px;
+        height: 33px;
+        margin: 0 5px;
+        padding: 10px;
     }
+    
+    .see-more-image {
+        min-height: 250px;
+    }
+    
+    .see-more-popup h5 {
+        padding: 0.5rem 1rem;
+        font-size: 22px;
+    }
+
+    .type-place, .size-place{
+        padding: 10px;
+    }
+
+    .cup-description img{
+        width: 35px;
+    }
+
+    .type-card{
+        padding: 5px 0;
+    }
+
+    .size-place h5{
+        padding-top: 0;
+    }
+    
+    .cup-description b, span{
+        font-size: 14px;
+    }
+
     .popup-image img {
         width: 280px;
         height: 300px;
+    }
+    .filter-options>div:first-child {
+        gap: 5px;
+        overflow-x: scroll;
+    }
+    .filter-options>div:first-child::-webkit-scrollbar {
+        background-color: rgb(226, 224, 224);
+        border-radius: 10px;
+        height: 8px;
+    }
+    .filter-options>div:first-child::-webkit-scrollbar-thumb {
+        background-color: red;
+        border-radius: 10px;
+    }
+    
+    .filter-options .btn {
+        border-radius: 10px;
+    }
+    
+    .filter-btn{
+        padding: 5px 5px;
+        font-size: 12px;
     }
 }
 
@@ -674,6 +706,11 @@ form .form-check:last-child{
         min-width: min-content;
         height: 30px;
     }
+
+    .see-more-popup{
+        width: 80%;
+    }
+
     .popup-image img {
         width: 250px;
         height: 270px;
@@ -681,5 +718,9 @@ form .form-check:last-child{
     .search-result-item img{
         width: 60px;
         height: 70px;
+    }
+
+    .see-more-image {
+        min-height: 200px;
     }
 }
