--- a/assets/style.css
+++ b/assets/style.css
@@ -69,20 +69,21 @@ header{
     transform: translateY(-100%);
 }
 
-.place-header h1{
-    margin-top: 20px;
-    font-size: 10px !important;
-    font-weight: 400;
-    color: red;
+.place-header{
+    padding: 10px 5px;
 }
 
 .place-header h1{
-    color: red;
+    margin-top: 20px;
+    text-align: center;
+    font-size: 30px;
+    font-weight: 600;
 }
 
 .info-place{
     display: flex;
     flex-wrap: wrap;
+    /* padding: 10px; */
 }
 
 .info-place-item{
