--- a/assets/style.css
+++ b/assets/style.css
@@ -341,6 +341,15 @@ main{
 }
 
 /* --------------------------------------- */
+
+.slider-on-the-top{
+    position: fixed;
+    top: 0;
+    z-index: 10000;
+    background-color: white;
+    padding: 10px 0;
+}
+
 .slider-place {
     position: sticky;
     top: 0px;
